--- a/views/login.jade
+++ b/views/login.jade
@@ -72,8 +72,8 @@ html
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .form-group(style='margin-top:10px;top: 1800px;')
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
-              .pull-right
               .col-sm-12.controls
+              .text-right
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               button#btn-login.btn.btn-success(type='submit') Login 
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
