--- a/views/search_results.jade
+++ b/views/search_results.jade
@@ -130,10 +130,10 @@ html
                    option(value='number_of_bedrooms') Number of Bedrooms
                    option(value='square_size') Square feet
                 #divAsc
-                  input(type="radio", name= "radioSel", class="radioSel", value='ASC', checked) 
+                  input(type="radio", name= "radioSel", class="radioSel", value='ASC',onchange="loadDoc()", checked) 
                   label(for="contactChoice1") Ascending
                   br
-                  input(type="radio", name= "radioSel",class="radioSel",value="DESC") 
+                  input(type="radio", name= "radioSel",class="radioSel",onchange="loadDoc()",value="DESC") 
                   label(for="contactChoice1") Descending
         .col-xs-9.col-sm-9.col-md-9
           .container
@@ -152,13 +152,20 @@ html
       script.
  
          function loadDoc() {
+            var radio = document.getElementsByClassName("radioSel");
+            for(i=0;i<radio.length;i++)
+            {
+              if(radio[i].checked){
+                 opt = radio[i].value;
+                 opt = opt.replace(/^"|"$/g, '');
+              }
+            }
             var sel = document.getElementById("selOption");
-            var details = document.getElementById("featureBox");
-            var city_details = details.getElementsByTagName('p');
-            var str = city_details[1].innerHTML.split(',')[2];
-            console.log("hello",str);
+            var search_val = document.getElementById("search_input").value;
+            var select_opt = document.getElementById("zip");
             var query = sel.value;
-            var url = "sort?q="+query + "&city="+str.trim();
+            var param1 = select_opt.value;
+            var url = "sort?q="+query +  "&criteria" + "=" + param1 + "&criteria_val" + "=" + search_val + "&" + "o" + "=" + opt;
             console.log(query);
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
