--- a/views/header.jade
+++ b/views/header.jade
@@ -196,11 +196,11 @@ html
                 a.links(href='homepage') 
                  span.glyphicon.glyphicon-home
               li.upper-links
-                a.links(href='aboutus') About us
-              li.upper-links
                 a.links(href='login') Agent Login
               li.upper-links
                 a.links(href='signup') Sign Up
+              li.upper-links
+                a.links(href='aboutus') About us
               li.upper-links
                 a.links(href='http://clashhacks.in/')
                   svg(width='16px', height='12px', style='overflow: visible;')
@@ -208,13 +208,14 @@ html
                 span.glyphicon.glyphicon-th-large
                 ul.dropdown-menu
                   li.profile-li
-                    a.profile-links(href='http://yazilife.com/') Profile
+                    a.profile-links(href='homepage') 
+                      span.glyphicon.glyphicon-home
                   li.profile-li
-                    a.profile-links(href='http://hacksociety.tech/') Sell a Property
+                    a.profile-links(href='login') Agent Login
                   li.profile-li
-                    a.profile-links(href='http://clashhacks.in/') Selling Properties DashBoard
+                    a.profile-links(href='signup') Sign Up
                   li.profile-li
-                    a.profile-links(href='http://clashhacks.in/') Sign Out
+                    a.profile-links(href='aboutus') About us
           .row.row2
             .col-sm-3
               h2(style='margin:0px;')
@@ -323,9 +324,10 @@ html
         .container(style='background-color: #2874f0; padding-top: 10px;')
           span.sidenav-heading Home
           a.closebtn(href='javascript:void(0)', onclick='closeNav()') ×
-        a.profile-links(href='http://yazilife.com/') Profile
-        a.profile-links(href='http://hacksociety.tech/') Sell a Property
-        a.profile-links(href='http://clashhacks.in/') Selling Properties DashBoard
+        a.profile-links(href='homepage') 
+         span.glyphicon.glyphicon-home
+        a.profile-links(href='login') Agent Login
+        a.profile-links(href='signup') Sign Up
         | 
-        a.profile-links(href='http://clashhacks.in/') Sign Out
+        a.profile-links(href='aboutus') About us
 
