probably last commit, front-end finalizations and tweaks + google analytics

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,7 +2,13 @@
 doctype html
 html
   head
-    title= title
+    script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-111304983-1')
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-111304983-1');
+    title= RECycle
     
     link(rel="shortcut icon" href="/images/sfsu.jpg" type="image/jpg")
     title RECycle
