--- a/views/add_details.jade
+++ b/views/add_details.jade
@@ -1,5 +1,11 @@
 html
   head
+    script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-111304983-1')
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-111304983-1');
     title Add details
     |     
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
@@ -61,7 +67,7 @@ html
     #header  
     | &#x9;&#x9;
   #mainform.container.col-sm-12
-      #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:50px')
+      #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:-60px')
         .panel.panel-info
           .panel-heading
             .panel-title Add details
