--- a/views/home_layout.jade
+++ b/views/home_layout.jade
@@ -5,9 +5,9 @@ html
     link(rel='stylesheet', href='/fa17g13/stylesheets/home_style.css')
     link(rel="shortcut icon" href="/fa17g13/images/sfsu.jpg" type="image/jpg")
   title= title
-
   body
-  .container
-    .main-content
+   .container
+      .main-content
 
        block content
+    #footer
