--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -65,6 +65,7 @@ html
       height: 500px;
       width: 100%;
       background-size: cover;
+      margin-top:-20px;
       background-image: url('http://designexplora.com/wp-content/uploads/2016/07/Design-Wallpaper-And-Photo-High-Resolution-Download-Interior-Design-In-Interior-Design-Pictures.jpg');
       }
        .text {
@@ -218,7 +219,7 @@ html
                   p Hello, How can I help you today? 
           .inputbox
             .row
-              input#usermessage(type='text', placeholder='type something', size='20px')
+              input#usermessage(type='text', placeholder='type something', size='15px')
               button#submitB.btn.btn-primary.btn-xs(type='button')
                 span.glyphicon.glyphicon-share-alt
        #footer   
