--- a/views/login.jade
+++ b/views/login.jade
@@ -1,6 +1,12 @@
 doctype html
 html
   head
+    script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-111304983-1')
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-111304983-1');
     meta(charset='utf-8')
     | &#x9;
     meta(name='viewport', content='width=device-width, initial-scale=1')
@@ -39,6 +45,10 @@ html
       opacity: 0.2;
       filter:alpha(opacity=40);
       z-index: -1;
+      }
+      #btn-login {
+      position: relative; 
+      left: 80%;
       }
     | &#x9;
     | &#x9;
