--- a/views/message_details.jade
+++ b/views/message_details.jade
@@ -1,6 +1,12 @@
 doctype html
 html
   head
+    script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-111304983-1')
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-111304983-1');
     meta(charset='utf-8')
     | &#x9;
     meta(name='viewport', content='width=device-width, initial-scale=1')
@@ -32,7 +38,8 @@ html
       }
       .row1{
       padding-top: 10px;
-      }
+      padding-bottom: 50px;
+       }
       .row2 {
       padding-bottom: 20px;
       }
@@ -257,13 +264,13 @@ html
                 table#NewMails.dashboard
                   tr.header
                     th(style='width:40%;') From
-                    th(style='width:50%;') Message
+                    th(style='width:40%;') Message
                     |  
-                    th(style='width:30%;') Subject
+                    th(style='width:30%;') Contact Number
                     |  
-                    th(style='width:20%;') Date
+                    th(style='width:20%;') Email ID
                     |  
-                    th(style='width:5px;')  
+                    th(style='width:30%;') House details 
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                    - each item in rows
                     form(name = "myform",role='form',method='post',action='deleteMessage?id=#{item.contact_ID}')
@@ -274,7 +281,10 @@ html
                       | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                       td #{item.vphone}
                       | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
-                      td 11/21/17 
+                      td #{item.bemail}
+                      | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                      td 
+                       a(href='home_search_results?id=#{item.id}') House details
                       | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                       td
                         button#deleteButton.btn.btn-default.btn-sm(type='submit')
