contact seller input validation

--- a/views/header.jade
+++ b/views/header.jade
@@ -323,6 +323,7 @@ html
                     localStorage.setItem("search", search);
                     localStorage.setItem("option", select);
                     localStorage.reload();
+                    //localStorage.clear();
                     return false;
                    //return true;
                    }
