--- a/views/profile.jade
+++ b/views/profile.jade
@@ -277,7 +277,7 @@ html
     
     .container
         .main-content
-        p Welcome to your dashboard 
+        p Welcome to your dashboard #{item.first_name} 
         
 
         
