--- a/views/header.jade
+++ b/views/header.jade
@@ -232,7 +232,7 @@ html
             .col-sm-7.col-md-7
              form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm() & saveComment()")
               select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
-                  option(value='none') Search by 
+                  option(value='none',selected='selected') Search by 
                  
                   option(value='zipcode') Zipcode
                  
